Edited Testimonial placeholders to appear more professional

--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
                 <div class="controls">
                   <span class="input-group-addon"><i class="fa fa-user"></i></span>
                   <label>Full Name:</label>
-                  <input type="text" class="form-control" id="name" placeholder="First Last" required data-validation-required-message="Please enter your name.">
+                  <input type="text" class="form-control" id="name" placeholder="First Last" required data-validation-required-message="Please enter your first and last name.">
                   <p class="help-block"></p>
                 </div>
               </div>
@@ -256,7 +256,7 @@
                 <div class="controls">
                   <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
                   <label class="control-label">Zip Code:</label>
-                    <input type="text" class="form-control" id="postal-code" placeholder="zip or postal code" required data-validation-required-message="Please enter your zip code.">
+                    <input type="text" class="form-control" id="postal-code" placeholder="zip or postal code" style="color:black" required data-validation-required-message="Please enter your zip code.">
                     <p class="help-block"></p>
                 </div>
               </div>
@@ -359,7 +359,7 @@
             <div class="controls">
               <span class="input-group-addon"><i class="fa fa-sticky-note"></i></span>
               <label>Additional notes:</label>
-              <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your additional notes" maxlength="999" style="resize:none"></textarea>
+              <textarea rows="10" cols="100" class="form-control" id="message" maxlength="999" style="resize:none"></textarea>
             </div>
           </div>
 
