--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('dennis-with-dogs(wide).png')">
+        <div class="carousel-item" style="background-image: url('dogs(wide).jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3 class="h3-carousel rounded">Dog runs!</h3>
             <h6 class="rounded" style="background-color: white; color: black;">
@@ -365,56 +365,76 @@
     <div class="card text-white bg-main my-5 py-4 text-center">
       <div class="card-body">
         <h1>Testimonials</h1>
-        <p class="text-white m-0">Reviews from our clients!</p>
+        <p class="text-white m-0">Reviews from our clients! (Placeholders for now)</p>
       </div>
-    </div>
+    </div-->
     <!-- TESTIMONIALS -->
-    <div class="row">
-      <!--Grid column-->
+    <div-- class="row">
+
       <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
-        <!--Card-->
+
         <div class="card testimonial-card">
-          <!--Avatar-->
+
           <div class="avatar mx-auto white">
-            <img src="Willie.jpg" alt="Avatar" class="avatar">
+            <img src="https://via.placeholder.com/150" alt="Avatar" class="avatar">
           </div>
           <div class="card-body">
-            <!--Name-->
-            <h4 class="font-weight-bold mb-4">Willie</h4>
+
+            <h4 class="font-weight-bold mb-4">John Doe</h4>
             <span><i class="text-warning fa fa-star"></i></span>
             <span><i class="text-warning fa fa-star"></i></span>
             <span><i class="text-warning fa fa-star"></i></span>
             <span><i class="text-warning fa fa-star"></i></span>
             <span><i class="text-warning fa fa-star"></i></span>
             <hr>
-            <!--Quotation-->
+
             <p class="dark-grey-text mt-4"><i class="fa fa-quote-left" aria-hidden="true"></i>
-              </i>Dori me
-              Interimo, adapare
-              Dori me
-              Ameno Ameno
-              Latire
-              Latiremo
-              Dori me</p>
+              </i>
+
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+            </p>
           </div>
         </div>
-        <!--Card-->
-      </div>
-      <!--Grid column-->
 
-      <!--Grid column-->
+      </div>
+
+
       <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
-        <!--Card-->
+
         <div class="card testimonial-card">
-          <!--Background color-->
-          <!--div class="card-up blue-gradient">
-          </div-->
-          <!--Avatar-->
+
           <div class="avatar mx-auto white">
-            <img src="dennis.jpg" alt="Avatar" class="avatar">
+            <img src="https://via.placeholder.com/150" alt="Avatar" class="avatar">
           </div>
           <div class="card-body">
-            <!--Name-->
+
+            <h4 class="font-weight-bold mb-4">John Doe</h4>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <hr>
+
+            <p class="dark-grey-text mt-4"><i class="fa fa-quote-left" aria-hidden="true"></i>
+              </i>
+
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+
+        <div class="card testimonial-card">
+          <div class="avatar mx-auto white">
+            <img src="https://via.placeholder.com/150" alt="Avatar" class="avatar">
+          </div>
+          <div class="card-body">
             <h4 class="font-weight-bold mb-4">The Golden God</h4>
             <span><i class="text-warning fa fa-star"></i></span>
             <span><i class="text-warning fa fa-star"></i></span>
@@ -422,43 +442,15 @@
             <span><i class="text-warning fa fa-star"></i></span>
             <span><i class="text-warning fa fa-star"></i></span>
             <hr>
-            <!--Quotation-->
             <p class="dark-grey-text mt-4"><i class="fa fa-quote-left" aria-hidden="true"></i>
-              </i>Mm. I have contained my rage for as long as possible, but I shall unleash my fury upon you like the crashing of a thousand waves! Begone, vile man! Begone from me! A starter car? This car is a finisher car! A transporter of gods! The golden god! I am untethered, and my rage knows no bounds! </p>
-          </div>
-        </div>
-        <!--Card-->
-      </div>
-      <!--Grid column-->
+              </i>
 
-      <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
-        <!--Card-->
-        <div class="card testimonial-card">
-          <!--Background color-->
-          <!--div class="card-up blue-gradient">
-          </div-->
-          <!--Avatar-->
-          <div class="avatar mx-auto white">
-            <img src="dennis.jpg" alt="Avatar" class="avatar">
-          </div>
-          <div class="card-body">
-            <!--Name-->
-            <h4 class="font-weight-bold mb-4">The Golden God</h4>
-            <span><i class="text-warning fa fa-star"></i></span>
-            <span><i class="text-warning fa fa-star"></i></span>
-            <span><i class="text-warning fa fa-star"></i></span>
-            <span><i class="text-warning fa fa-star"></i></span>
-            <span><i class="text-warning fa fa-star"></i></span>
-            <hr>
-            <!--Quotation-->
-            <p class="dark-grey-text mt-4"><i class="fa fa-quote-left" aria-hidden="true"></i>
-              </i>Mm. I have contained my rage for as long as possible, but I shall unleash my fury upon you like the crashing of a thousand waves! Begone, vile man! Begone from me! A starter car? This car is a finisher car! A transporter of gods! The golden god! I am untethered, and my rage knows no bounds! </p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+            </p>
           </div>
         </div>
-        <!--Card-->
       </div>
-      <!--Grid column-->
     </div>
 
     <!-- Button trigger modal -->
